src/objects/Pricing_Request__c.object
<CustomObject>
    <fields>
        <fullName>Pricing_Request_Approval_Date__c</fullName>
        <label>Pricing Request Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pricing_Request_Approval_Status__c</fullName>
        <label>Pricing Request Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Submitted</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Additional Information Required</fullName>
                </value>
                <value>
                    <fullName>Pending Final Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Under Appeal</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Request_MOHCD_Follow_up_Details__c</fullName>
        <label>Pricing Request MOHCD Follow-up Details</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_Request_Ready_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing Request Ready for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Request_Submit_Date__c</fullName>
        <label>Pricing Request Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Marketing_Launch_Date__c</fullName>
        <description>Required, Validation: Must be at least 40 days after the request submit date, but no more than 70 days after the request submit date. Cannot be in a different calendar year than 10 days after the pricing request submit date (&quot;Pricing Request Expected Approval Date&quot;)</description>
        <inlineHelpText>Must be no sooner than 30 days from the date of first marketing plan submission, and no more than 70 days from Pricing Request Submit Date.</inlineHelpText>
        <label>Proposed Marketing Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stacker_Spaces_Description__c</fullName>
        <label>Stacker Spaces Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stacker_Spaces__c</fullName>
        <label>Stacker Spaces?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_AMI_Percent_for_These_Units__c</fullName>
        <description>The Target AMI for these Units</description>
        <formula>Listing__r.AMI_Percentage__c</formula>
        <inlineHelpText>The Target AMI for these Units</inlineHelpText>
        <label>Target AMI Percent for These Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Temporary_COO_Actual_Issuance_Date__c</fullName>
        <formula>Listing__r.Building__r.Temporary_COO_Actual_Issuance_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temporary COO Actual Issuance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Temporary_COO_Expected_Issue_Date__c</fullName>
        <description>Expected Date the Temporary COO will be issued.</description>
        <formula>Listing__r.Building__r.Temporary_COO_Expected_Issue_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected Date the Temporary COO will be issued.</inlineHelpText>
        <label>Temporary COO Expected Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_for_Rental_restricted_units__c</fullName>
        <description>For Sources of Government Financing, how long must your units be restricted as rental units under this financing?</description>
        <inlineHelpText>For Sources of Government Financing, how long must your units be restricted as rental units under this financing?</inlineHelpText>
        <label>Time for Rental restricted units</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Units_in_the_Bldg_including_BMR__c</fullName>
        <formula>Listing__r.Building__r.Total_Units_in_the_Bldg_including_BMR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total # Units in the Bldg- including BMR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_1_Bedrooms__c</fullName>
        <description>From the Building, Total Number of 1 BRs in the Building.</description>
        <formula>Listing__r.Building__r.Total_of_1_Bedrooms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the Building, Total Number of 1 BRs in the Building.</inlineHelpText>
        <label>Total # of 1 Bedrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_2_Bedrooms__c</fullName>
        <description>From the Building, Total number of 2 Bedrooms.</description>
        <formula>Listing__r.Building__r.Total_of_2_Bedrooms__c</formula>
        <inlineHelpText>From the Building, Total number of 2 Bedrooms.</inlineHelpText>
        <label>Total # of 2 Bedrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_3_Bedrooms__c</fullName>
        <description>From the Building, Total Number of 3 Bedrooms.</description>
        <formula>Listing__r.Building__r.Total_of_3_Bedrooms__c</formula>
        <inlineHelpText>From the Building, Total Number of 3 Bedrooms.</inlineHelpText>
        <label>Total # of 3 Bedrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_BMR_1_Bedroom_s__c</fullName>
        <label>Total # of BMR 1 Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_BMR_1plus_Bedroom_s__c</fullName>
        <label>Total # of BMR 1+ Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_BMR_2_Bedroom_s__c</fullName>
        <label>Total # of BMR 2 Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_BMR_2plus_Bedrooms__c</fullName>
        <label>Total # of BMR 2+ Bedrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_BMR_3_Bedroom_s__c</fullName>
        <label>Total # of BMR 3 Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_BMR_3plus_Bedroom_s__c</fullName>
        <label>Total # of BMR 3+ Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_BMR_Jr_1_Bedroom_s__c</fullName>
        <label>Total # of BMR Jr. 1 Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_BMR_Other_Bedrooms__c</fullName>
        <label>Total # of BMR Other Bedrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_BMR_SRO_s__c</fullName>
        <label>Total # of BMR SRO&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_BMR_Studio_s__c</fullName>
        <label>Total # of BMR Studio&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Market_Rate_1_Bedroom_s__c</fullName>
        <label>Total # of Market Rate 1 Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Market_Rate_1plus_Bedroom_s__c</fullName>
        <label>Total # of Market Rate 1+ Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Market_Rate_2_Bedroom_s__c</fullName>
        <label>Total # of Market Rate 2 Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Market_Rate_2plus_Bedroom_s__c</fullName>
        <label>Total # of Market Rate 2+ Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Market_Rate_3_Bedroom_s__c</fullName>
        <label>Total # of Market Rate 3 Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Market_Rate_3plus_Bedroom_s__c</fullName>
        <label>Total # of Market Rate 3+ Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Market_Rate_Jr_1_Bedroom_s__c</fullName>
        <label>Total # of Market Rate Jr. 1 Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Market_Rate_Other_Bedroom_s__c</fullName>
        <label>Total # of Market Rate Other Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Market_Rate_SRO_s__c</fullName>
        <label>Total # of Market Rate SRO&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Market_Rate_Studio_s__c</fullName>
        <label>Total # of Market Rate Studio&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Market_Rate_Units_in_Building__c</fullName>
        <formula>Total_of_Market_Rate_SRO_s__c + 
Total_of_Market_Rate_Studio_s__c + 
Total_of_Market_Rate_1_Bedroom_s__c + 
Total_of_Market_Rate_1plus_Bedroom_s__c + 
Total_of_Market_Rate_2_Bedroom_s__c + 
Total_of_Market_Rate_2plus_Bedroom_s__c + 
Total_of_Market_Rate_3_Bedroom_s__c + 
Total_of_Market_Rate_3plus_Bedroom_s__c + 
Total_of_Market_Rate_4_Bedroom_s__c + 
Total_of_Market_Rate_Other_Bedroom_s__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total # of Market Rate Units in Building</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Other_Bedrooms__c</fullName>
        <description>From the Building, Total Number of Units with More than 4 Bedrooms.</description>
        <formula>Listing__r.Building__r.Total_of_Other_Bedrooms__c</formula>
        <inlineHelpText>From the Building, Total Number of Units with More than 4 Bedrooms.</inlineHelpText>
        <label>Total # of Other Bedrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Parking_Spaces_for_All_Units__c</fullName>
        <label>Total # of Parking Spaces for All Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_SROs__c</fullName>
        <description>From the Building, Total Number of SRO Units.</description>
        <formula>Listing__r.Building__r.Total_Number_of_SROs_in_Building__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the Building, Total Number of SRO Units.</inlineHelpText>
        <label>Total # of SROs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Studios__c</fullName>
        <description>From the Building, Total Number of Studios.</description>
        <formula>Listing__r.Building__r.Total_Number_of_Studios_in_Building__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the Building, Total Number of Studios.</inlineHelpText>
        <label>Total # of Studios</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utilities_Paid_By_Renters__c</fullName>
        <label>Utilities Paid By Renters</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Utilities_Paid_by_the_Building__c</fullName>
        <label>Utilities Paid by the Building</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>of_Below_Ground_Parking_Spaces__c</fullName>
        <label># of Below Ground Parking Spaces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Residential_Floors_in_the_Building__c</fullName>
        <formula>Listing__r.Building__r.of_Residential_Floors_in_the_Building__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Residential Floors in the Building</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Surface_Level_Above_Parking_Spaces__c</fullName>
        <inlineHelpText># of Surface Level/Above Ground Parking Spaces</inlineHelpText>
        <label># of Surface Level/Above Parking Spaces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Pricing Request</label>
    <nameField>
        <label>Pricing Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Requests</pluralLabel>
    <recordTypes>
        <fullName>BMR_Rental</fullName>
        <active>true</active>
        <label>BMR Rental</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Pricing_Request_and_Marketing_Launch</fullName>
        <active>true</active>
        <description>Validation: Must be at least 40 days after the request submit date, but no more than 70 days after the request submit date. Cannot be in a different calendar year than 10 days after the pricing request submit date (&quot;Pricing Request Expected Appr</description>
        <errorConditionFormula>(Proposed_Marketing_Launch_Date__c  &lt;=  (Pricing_Request_Submit_Date__c + 40)   || Proposed_Marketing_Launch_Date__c   &gt;= (Pricing_Request_Submit_Date__c + 70))   ||
AND (YEAR(Proposed_Marketing_Launch_Date__c) &gt; YEAR(Pricing_Request_Submit_Date__c), OR(MONTH(Proposed_Marketing_Launch_Date__c)  &lt;&gt;  1, DAY(Proposed_Marketing_Launch_Date__c) &gt; 10))</errorConditionFormula>
        <errorDisplayField>Proposed_Marketing_Launch_Date__c</errorDisplayField>
        <errorMessage>Must be at least 40 days after the request submit date, but no more than 70 days after the request submit date. Cannot be in a different calendar year than 10 days after the pricing request submit date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>STD_Users_Only_can_edit_Approved_PRicing</fullName>
        <active>true</active>
        <description>Only standard users (MOHCD staff) can edit approved pricing requests</description>
        <errorConditionFormula>NOT(ISPICKVAL($Profile.UserType, &apos;Standard&apos;)) &amp;&amp; ISPICKVAL(Status__c, &apos;Approved&apos;)</errorConditionFormula>
        <errorMessage>Only MOHCD staff can edit approved pricing requests.</errorMessage>
    </validationRules>
</CustomObject>